[build-system]
requires = [
  "sphinx-theme-builder @ https://github.com/pradyunsg/sphinx-theme-builder/archive/87214d0671c943992c05e3db01dca997e156e8d6.zip",
]
build-backend = "sphinx_theme_builder"

[tool.sphinx-theme-builder]
node-version = "16.13.2"
theme-name = "quantinuum_docs_theme"

[project]
name = "quantinuum-docs-theme"
description = ""
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "sphinx>=5",
  "beautifulsoup4",
  "docutils!=0.17.0",
  "packaging",
  "Babel",
  "pygments>=2.7",
  "accessible-pygments",
  "typing-extensions",
]
license = { file = "LICENSE" }
maintainers = [
  { name = "Aidan Keay", email = "aidan.keay@quantinuum.com" },
]


[project.optional-dependencies]
doc = [
  "numpydoc",
  "linkify-it-py",         # for link shortening
  "rich",
  "sphinxext-rediraffe",
  "sphinx-sitemap",
  "sphinx-autoapi>=3.0.0",
  # For examples section
  "myst-parser",
  "ablog>=0.11.8",
  "jupyter_sphinx",
  "pandas",
  "plotly",
  "matplotlib",
  "numpy",
  "xarray",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-togglebutton",
  "jupyterlite-sphinx",
  "sphinxcontrib-youtube>=1.4.1",
  "sphinx-favicon>=1.0.1",
  "ipykernel",
  "nbsphinx",
  "ipyleaflet",
  "colorama",
  "ipywidgets",
  "graphviz",
  'quantinuum-docs-theme'
]
test = ["pytest", "pytest-cov", "pytest-regressions", "sphinx[test]"]
dev = [
  "pyyaml",
  "pre-commit",
  "quantinuum-docs-theme[doc,test]",
  "tox",
  "pandoc",
  "sphinx-theme-builder[cli]",
]


[project.entry-points]
"sphinx.html_themes" = { quantinuum_docs_theme = "quantinuum_docs_theme" }

